Hide resizer and stop wrap in menu

--- a/css/dashboards/dashboards.css
+++ b/css/dashboards/dashboards.css
@@ -512,6 +512,7 @@
     display: flex;
     min-width: 100%;
     column-gap: 8px;
+    white-space: nowrap;
 }
 
 .highcharts-dashboards-edit-toggle-wrapper,
